--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <h2 id="规则频道-rules">规则频道 | Rules</h2>
 <p>群昵称包含游戏完整id，群聊天不限制内容，但广告和不当言论或敏感内容等可能遭致禁言或者机票，欢迎和谐交流。</p>
 <h2 id="java正版联机频道-multiplayers">JAVA正版联机频道 | Multiplayers</h2>
-<ol type="1">
-<li><p>幽闭噩梦 - 1.3.5.2<br />
-&gt; host: xxnode.bupt.moe<br />
-&gt; LUT: 2021-5-8</p></li>
-<li><p>格雷空岛 - 5.2<br />
-&gt; host: xxnode.bupt.moe:23333<br />
-&gt; LUT: 2021-5-8</p></li>
-<li><p>Antimatter Chemistry - 1.2.34<br />
-&gt; host: www.sdyg.games<br />
-&gt; LUT: 2021-4-26</p></li>
+<ol>
+<li><p>幽闭噩梦 - 1.3.5.2</p>
+<blockquote>
+<p>host: xxnode.bupt.moe<br />
+LUT: 2021-5-8</p>
+</blockquote></li>
+<li><p>格雷空岛 - 5.2</p>
+<blockquote>
+<p>host: xxnode.bupt.moe:23333<br />
+LUT: 2021-5-8</p>
+</blockquote></li>
+<li><p>Antimatter Chemistry - 1.2.34</p>
+<blockquote>
+<p>host: www.sdyg.games<br />
+LUT: 2021-4-26</p>
+</blockquote></li>
 </ol>
 <h2 id="补充频道-miscellaneous">补充频道 | Miscellaneous</h2>
 <p>整合包文件在群共享(MC_整合包)<br />
