--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <ol>
 <li><p>幽闭噩梦 - 1.3.5.2</p>
 <blockquote>
-<p>host: xxnode.bupt.moe<br />
-LUT: 2021-5-8</p>
+host: xxnode.bupt.moe<br />
+LUT: 2021-5-8
 </blockquote></li>
 <li><p>格雷空岛 - 5.2</p>
 <blockquote>
